<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:paddingRight="10dp"
    android:paddingLeft="10dp"
    android:orientation="vertical"
    android:paddingTop="20dp">
    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:inputType="text"
        android:hint="@string/firstname"
        android:textColorHint="@color/material_light_blue_A200"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:inputType="text"
        android:hint="@string/lastname"
        android:textColorHint="@color/material_light_blue_A200"/>
    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textColorHint="@color/material_light_blue_A200"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:inputType="number"
        android:hint="@string/phone_number"
        android:textColorHint="@color/material_light_blue_A200"/>
    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColorHint="@color/material_light_blue_A200"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/material_light_blue_A200"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:id="@+id/signup_btn"
        android:textColor="@color/material_pink_A700"/>
    </LinearLayout>

