<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingRight="10dp"
    android:paddingLeft="10dp"
    android:padding="10dp"
    android:paddingTop="20dp">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:inputType="text"
        android:hint="@string/username"
        android:textColorHint="@color/material_indigo_A400"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:inputType="text"
        android:hint="@string/password"
        android:textColorHint="@color/material_indigo_A400"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login_btn"
        android:textColor="@color/material_purple_A200"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/register"
        android:id="@+id/register_btn"
        android:textColor="@color/material_deep_purple_A200"/>



</LinearLayout>